--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            artifactId = 'server-sdk'
+            artifactId = 'pataflags-sdk-java'
             from components.java
         }
     }
