change com.pataflags to io.koople

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,6 +3,6 @@ logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlig
 
 
 fflags.server.protocol=https
-fflags.server.host=sdk.pataflags.com
+fflags.server.host=sdk.koople.com
 fflags.server.port=443
 fflags.server.endpoint=/proxy/server/initialize
