--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'maven-publish'
 }
 
-group 'com.pataflags'
+group 'io.koople'
 version '0.0.4-SNAPSHOT'
 
 sourceCompatibility = 1.8
@@ -17,7 +17,7 @@ repositories {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            artifactId = 'pataflags-sdk-java'
+            artifactId = 'koople-sdk-java'
             from components.java
         }
     }
