rename application properties for server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 logging.level.root=INFO
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) - %msg%n
 
-fflags.server.url=localhost
-fflags.server.port=8080
+koople.server.protocol=https
+koople.server.host=sdk.koople.io
+koople.server.port=443
+koople.server.endpoint=/proxy/server/initialize
