--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,7 +2,7 @@ logging.level.root=INFO
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) - %msg%n
 
 
-fflags.server.protocol=https
-fflags.server.host=sdk.koople.io
-fflags.server.port=443
-fflags.server.endpoint=/proxy/server/initialize
+koople.server.protocol=https
+koople.server.host=sdk.koople.io
+koople.server.port=443
+koople.server.endpoint=/proxy/server/initialize
