--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,33 @@
         </repository>
     </distributionManagement>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <groupId>io.koople</groupId>
+                    <artifactId>fflags-evaluator</artifactId>
+                    <version>0.0.5</version>
+                    <packaging>jar</packaging>
+                    <file>${basedir}/evaluator/fflags-evaluator-0.0.5.jar</file>
+                    <generatePom>true</generatePom>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>install-jar-lib</id>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <phase>validate</phase>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -81,8 +108,7 @@
             <groupId>io.koople</groupId>
             <artifactId>fflags-evaluator</artifactId>
             <version>0.0.5</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/evaluator/fflags-evaluator-0.0.5.jar</systemPath>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -97,4 +123,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 </project>
