--- a/pom.xml
+++ b/pom.xml
@@ -192,8 +192,7 @@
             <groupId>io.koople</groupId>
             <artifactId>fflags-evaluator</artifactId>
             <version>0.0.5</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/evaluator/fflags-evaluator-0.0.5.jar</systemPath>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
