--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 
     compile "com.google.guava:guava:28.1-jre"
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.8"
-    compile files('evaluator/fflags-evaluator-0.0.5.jar')
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.5'
 }
 
 install.dependsOn ':build'
